# risinglight

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Makefile  README.md  build.rs  clippy.toml  flake.nix  pyproject.toml  rust-toolchain  rustfmt.toml
.cargo/: config.toml
.devcontainer/: Dockerfile  devcontainer.json  setup.sh
.github/workflows/: bench.yml  ci.yml  tutorial.yml
benches/: array.rs  e2e.rs  tpch.rs
code/: Cargo.toml
code/01-01/: Cargo.toml
code/01-02/: Cargo.toml
code/01-02/src/: db.rs  executor.rs  lib.rs  main.rs  parser.rs  test.rs  types.rs
code/01-02/src/catalog/: database.rs  mod.rs  root.rs  schema.rs  table.rs
code/01-03/: Cargo.toml
code/01-04/: Cargo.toml
code/01-05/: Cargo.toml
code/01-06/: Cargo.toml
code/01-06/src/: db.rs  lib.rs  main.rs  parser.rs  storage.rs  test.rs
code/01-06/src/array/: iter.rs  primitive_array.rs  utf8_array.rs
code/01-06/src/binder/: mod.rs
code/01-06/src/binder/statement/: create_table.rs  insert.rs
code/01-06/src/catalog/: column.rs
code/01-06/src/executor/: explain.rs  insert.rs  mod.rs  values.rs
code/01-06/src/logical_planner/: create.rs  explain.rs  insert.rs  mod.rs
code/01-06/src/physical_planner/: create.rs  explain.rs  insert.rs  mod.rs
code/01-07/: Cargo.toml
code/sql/: 01-01.slt  01-03.slt  01-05.slt  01-06.slt  01-07.slt
code/sqllogictest/: Cargo.toml
dev/bench/: data.js
docs/: 00-develop.md  01-tpch.md  02-contributing.md  03-architecture-overview.md  04-storage-overview.md  05-e2e-tests.md  06-storage-basics.md  07-python-extension.md  book.toml
docs/src/: 00-lets-build-a-database.md  01-01-hello-sql.md  01-02-catalog.md  01-03-create-table.md  01-04-array.md  01-05-insert.md  01-06-planner.md  01-07-select.md  01-intro.md  02-01-cast.md  02-02-operation.md  02-03-where.md  02-04-order.md  02-05-aggregation.md  02-06-join.md  02-07-limit.md  02-08-group.md  02-09-having.md  02-10-sort-merge-join.md  02-11-hash-join.md  02-12-nested-query.md  02-13-tpch.md  02-query.md  03-01-constant-folding.md  03-01-optimizer.md  03-02-column-pruning.md  03-03-predicate-pushdown.md  03-04-cost-estimation.md  03-04-simplification.md  03-05-cascade-optimizer.md  03-06-join-reordering.md  03-optmization.md  04-01-merge-tree.md  04-02-memtable.md  04-02-write.md  04-04-read.md  04-06-compaction.md  04-06-deletion.md  04-08-snapshot.md  04-storage.md  (+2 more)
proto/: Cargo.toml  README.md  build.rs
proto/src/: lib.rs
proto/src/proto/: rowset.proto
src/: db.rs  egg.rs  lib.rs  lightdb.rs  main.rs
src/array/: alloc.rs  bitmap.rs  buffer.rs  bytes_array.rs  chunked_array.rs  data_chunk.rs  data_chunk_builder.rs  internal_ext.rs  iterator.rs  mod.rs  ops.rs  primitive_array.rs  shuffle_ext.rs  stream_chunk.rs  utf8_array.rs  valid_ext.rs  var_array.rs
src/binder/: context.rs  copy.rs  create_function.rs  create_index.rs  create_mview.rs  create_table.rs  create_view.rs  delete.rs  drop.rs  error.rs  expr.rs  expression.rs  insert.rs  mod.rs  select.rs  table.rs  table_ref.rs  udf.rs
src/binder_v2/: copy.rs  create_table.rs  delete.rs  drop.rs  expr.rs  insert.rs  mod.rs  select.rs  table.rs
src/buffer/: buffer.rs  buffer_pool.rs  mod.rs
src/catalog/: column.rs  column_catalog.rs  database.rs  function.rs  index.rs  mod.rs  root.rs  schema.rs  schema_catalog.rs  table.rs  table_catalog.rs
src/executor/: aggregation.rs  analyze.rs  copy_from_file.rs  copy_to_file.rs  create.rs  create_function.rs  create_index.rs  create_table.rs  create_view.rs  delete.rs  drop.rs  dummy_scan.rs  error.rs  evaluator.rs  exchange.rs  explain.rs  filter.rs  hash_agg.rs  hash_join.rs  insert.rs  internal.rs  limit.rs  merge_join.rs  mod.rs  nested_loop_join.rs  order.rs  perfect_hash_agg.rs  project.rs  projection.rs  seq_scan.rs  simple_agg.rs  sort_agg.rs  sort_merge_join.rs  system_table_scan.rs  table_scan.rs  top_n.rs  udf.rs  values.rs  window.rs
src/executor_v2/: copy_from_file.rs  copy_to_file.rs  create.rs  delete.rs  drop.rs  evaluator.rs  explain.rs  filter.rs  hash_agg.rs  hash_join.rs  insert.rs  internal.rs  limit.rs  merge_join.rs  mod.rs  nested_loop_join.rs  order.rs  projection.rs  simple_agg.rs  sort_agg.rs  table_scan.rs  top_n.rs  values.rs  window.rs
src/expr/: mod.rs
src/function/: abs.rs  add.rs  binary.rs  mod.rs  repeat.rs  unary.rs
src/log/: log_manager.rs  log_record.rs  mod.rs
src/logical_optimizer/: expr_utils.rs  mod.rs  plan_node.rs
src/logical_plan/: create.rs  filter.rs  insert.rs  mod.rs  projection.rs  select.rs  seq_scan.rs
src/logical_planner/: aggregate.rs  aggregation.rs  copy.rs  create.rs  delete.rs  drop.rs  explain.rs  filter.rs  hash_agg.rs  insert.rs  join.rs  limit.rs  mod.rs  order.rs  projection.rs  select.rs  seq_scan.rs  simple_agg.rs
src/optimizer/: arith_expr_simplification.rs  bool_expr_simplification.rs  constant_folding.rs  constant_moving.rs  expr_utils.rs  mod.rs  plan_visitor.rs
src/parser/: mod.rs  sql_parser.rs
src/physical_plan/: create.rs  drop.rs  filter.rs  insert.rs  mod.rs  projection.rs  seq_scan.rs
src/physical_planner/: aggregate.rs  aggregation.rs  copy.rs  copy_from_file.rs  copy_to_file.rs  create.rs  delete.rs  drop.rs  explain.rs  filter.rs  hash_agg.rs  input_ref_resolver.rs  insert.rs  join.rs  limit.rs  mod.rs  order.rs  projection.rs  seq_scan.rs  simple_agg.rs
src/planner/: column_set.rs  cost.rs  create.rs  explain.rs  insert.rs  mod.rs  optimizer.rs  partition.rs  projection.rs  rules.rs  seq_scan.rs
src/python/: mod.rs
src/python_extension/: mod.rs
src/rowset/: index_builder.rs  mod.rs  primitive_block_builder.rs  primitive_column_builder.rs  rowset_builder.rs
src/server/: lightdb.rs  mod.rs  (+1 more)
tests/: create.rs  insert.rs  select.rs  sqllogictest.rs  sqlplannertest.rs  tpch-full.sh
tests/sqllogictest/: Cargo.toml  build.rs
tests/sqllogictest/src/: lib.rs
tests/sqllogictest/tests/: .gitignore  disk.rs  mem.rs  sqllogictest.rs
tests/sqlplannertest/: Cargo.toml
tests/sqlplannertest/src/: lib.rs
tests/sqlplannertest/tests/: plannertest.rs
(+685 files in other folders)
