[package]
edition = "2021"
name = "risinglight"
version = "0.2.0"
description = "An OLAP database system for educational purpose"
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/risinglightdb/risinglight"
repository = "https://github.com/risinglightdb/risinglight"
keywords = ["sql", "database", "embedded", "cli"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["jemalloc"]
jemalloc = ["tikv-jemallocator"]

[dependencies]
anyhow = "1"
async-recursion = "1"
async-stream = "0.3"
async-trait = "0.1"
binary-heap-plus = "0.5"
bit-set = "0.5"
bitvec = { version = "1", features = ["serde"] }
btreemultimap = "0.1"
bytes = "1"
chrono = { version = "0.4", features = ["clock", "std", "wasmbind"] }
clap = { version = "4", features = ["derive"] }
comfy-table = { version = "6", default-features = false }
console-subscriber = "0.1"
crc32fast = "1"
csv = "1"
dirs = "4"
downcast-rs = "1"
egg = "0.9"
enum_dispatch = "0.3"
erased-serde = "0.3"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
futures-async-stream = "0.2"
humantime = "2"
indicatif = "0.17"
indoc = "2"
iter-chunks = "0.1"
itertools = "0.10"
minitrace = "0.4.0"
moka = { version = "0.10.0", features = ["future"] }
num-traits = "0.2"
ordered-float = { version = "3", features = ["serde"] }
parking_lot = "0.12"
parse-display = "0.8"
paste = "1"
pgwire = "0.10.0"
prost = "0.11.0"
ref-cast = "1.0"
regex = "1"
risinglight_proto = "0.2"
rust_decimal = "1"
rustyline = "10"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
smallvec = { version = "1", features = ["serde"] }
sqllogictest = "0.13.0"
sqlparser = { version = "0.30", features = ["serde"] }
thiserror = "1"
tikv-jemallocator = { version = "0.5", optional = true, features = ["disable_initial_exec_tls"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "parking_lot"] }
pyo3 = { version = "0.18.1", features = ["extension-module"] }
pretty-xmlish = "0.1"

[dev-dependencies]
criterion = { version = "0.4", features = ["async_tokio"] }
tempfile = "3"
test-case = "3"

[build-dependencies]
pyo3-build-config = "0.18.1"

[[bench]]
harness = false
name = "e2e"

[[bench]]
harness = false
name = "array"

[profile.bench]
codegen-units = 1
lto = 'thin'

[workspace]
members = [
    "proto",
    "tests/sqllogictest",
    "tests/sqlplannertest"
]

[patch.crates-io]
risinglight_proto = { path = "proto" }
egg = { git = "https://github.com/risinglightdb/egg", rev = "ec16399f7e331c4fdfe128bc4cfe174d53b7702d" }

[lib]
name = "risinglight"
crate-type = ["cdylib", "rlib"]
