[package]
name = "risinglight_proto"
version = "0.1.3"
edition = "2021"
description = "Proto for RisingLight"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/risinglightdb/risinglight"
repository = "https://github.com/risinglightdb/risinglight"
keywords = ["sql", "database", "embedded", "cli"]

[dependencies]
bytes = "1"
prost = "0.11.0"

[build-dependencies]
prost-build = "0.11.0"
