[package]
name = "risinglight-01-02"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9"
log = "0.4"
rustyline = "9"
sqlparser = "0.12"
thiserror = "1"

[dev-dependencies]
sqllogictest = "0.1"
test-case = "1.2"
