[package]
name = "risinglight-01-06"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22"
enum_dispatch = "0.3"
env_logger = "0.9"
itertools = "0.10"
log = "0.4"
prettytable-rs = { version = "0.8", default-features = false }
rustyline = "9"
sqlparser = "0.12"
thiserror = "1"

[dev-dependencies]
sqllogictest = "0.1"
test-case = "1.2"
