[package]
name = "risinglight_sqllogictest"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
env_logger = "0.9"
risinglight = { path = "../.." }
sqllogictest = "0.3"
tempfile = "3"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
test-case = "2"

[build-dependencies]
glob = "0.3"
